- some minor CSS modifications were done
- a bug on Internet Explorer 6 and sidebars was solved
- jQuery::iFixPNG was updated to 2.0
- "folder" and "folder_open" icons were also added in the GIF format (due the ie bug and our usage in list-style-image)
- P4A_DB_Navigator's CSS was reworked for browser compatibility
- a bug with PostgreSQL and automatic sequence name creation was fixed

2.99.5
- a bug with invisible P4A_Table was solved
- P4A_Quote_Javascript_String() global function was added
- P4A_Widget::requireConfirmation() method now uses P4A_Quote_Javascript_String()
- screen.css was renamed screen.css.php
- some of the images used for P4A_Table and P4A_Field were moved in a better directory organization
- P4A_Menu has a submenu indicator (a small arrow that make users aware that a submenu is present)
- jQuery::UI::datepicker was updated to 3.4
- a bug with FCKEditor's filemanager was solved
- P4A_Button now render the "disabled='disabled'" property if disabled
- P4A_Button now addes 'p4a_button_disabled' or 'p4a_button_image_disabled' class if disabled
- a bug with P4A_Field autocomplete was solved 
- P4A_DB_Source was completely ported to the new error handlers
- multicheckbox CSS was fixed
- P4A_Field::getAsMultiselect() method now added a "size" property if none was specified
- index.php file was reworked and the new logo was added
- index.php file was renamed index.html

2.99.4
- a bug with quoted strings in P4A_Field::getAsSelect was solved
- a bug with P4A::getFocusedObjectId() method was solved
- P4A_Object::__call() method now uses trigger_error() instead of p4a_error() when a method is not found
- P4A_Object::_loadHelper() method now direcly call P4A_Error_Handler() instead of trigger_error,
  so we can pass the error file/line and have a readable resulting error message
- a few modifications were done on P4A_DB_Source so now you can add joins without selecting
  any column from the joined table
- P4A_DB::getDBType() method was added